<resources>
    <string name="app_name">Garbage</string>

    <string name="activity_main_change_rank_button">Изменение порядка</string>

    <string name="appwidget_text">ПРИМЕР</string>
    <string name="add_widget">Добавить виджет</string>
    <string name="add_customizable_widget">Добавить костамизируемый виджет</string>

    <string name="red">Красный</string>
    <string name="green">Зеленый</string>
    <string name="blue">Синий</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="bLoadPref">Загрузить</string>
    <string name="bSavePref">Сохранить</string>
    <string name="buttonGoPref">Go Preferences</string>
    <string name="bGoBackPref">Назад</string>

    <string name="RUR">Рубль</string>
    <string name="USD">Доллар</string>
    <string name="EUR">Евро</string>

    <string name="income_item_name">Название статьи дохода</string>
    <string name="wallet_name">Имя кошелька</string>
    <string name="wallet_amount">Баланс кошелька</string>
    <string name="button_add_wallet">Добавить</string>
    <string name="button_add_income_item">Добавить</string>
    <string name="test_text_view_wallet">Кошелек</string>
    <string name="test_text_view_income_item">Доход</string>
    <string name="test_text_view_amount">10500.50</string>
    <string-array name="currency">
        <item>RUR</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>
    <string name="title_activity_main">Garbage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="expenditure_name">Имя расхода</string>
    <string name="test_text_view_expenditure">Расход</string>
    <string name="wallet_edit_context_text">Редактировать</string>

    <string name="not_enough_amount_on_wallet">Сумма списания не может быть больше остатка на кошельке</string>
    <string name="input_not_all_required_fields">Заполены не все обязательные поля</string>
    <string name="not_equal_currencies">Валюты кошельков не могут быть разными</string>
    <string name="cant_change_currencies">При редактировании операции над кошельком нельзя менять валюту редактируемой операции</string>
    <string name="date_time_label_format">dd.MM.yyyy HH:mm</string>
    <string name="date_label_format">dd.MM.yyyy</string>
    <string name="time_label_format">HH:mm</string>

    <string name="tv_income_item_label">Статьи доходов</string>
    <string name="tv_wallets_label">Счета</string>
    <string name="tv_expenditures_label">Статьи расходов</string>

    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
</resources>
