<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/rgColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/red">
        </RadioButton>
        <RadioButton
            android:id="@+id/rbGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green">
        </RadioButton>
        <RadioButton
            android:id="@+id/rbBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue">
        </RadioButton>
    </RadioGroup>

    <EditText
        android:id="@+id/garbage_customizable_configure_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_widget" />

</LinearLayout>